# deckhand-builds

./: .gitignore  AUTHORING.md  CHANGELOG.md  CONTRIBUTING.md  README.md  registry.yaml  release-please-config.json
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: ci.yml  release-please-automerge.yml  release-please.yml  release.yml
docs/reverse-engineering/: README.md
printers/sovol-sv08-max/screen-daemon/: CMakeLists.txt  README.md  builddeb.sh  gene5.py  main.cpp  script.py  start.sh  wpa.mk  wpa_test.c  wpa_wifi.c
printers/sovol-sv08-max/screen-daemon/include/: KlippyGcodes.h  MakerbaseParseIni.h  MoonrakerAPI.h  event.h  file_list.h  mks_error.h  mks_file.h  mks_gcode.h  mks_gpio.h  mks_hardware_test.h  mks_init.h  mks_log.h  mks_net_info.h  mks_printer.h  mks_reprint.h  mks_update.h  mks_wpa_cli.h  process_messages.h  refresh_ui.h  send_msg.h  sovol_http.h  timelapse_list.h  ui.h  websocket_client.h  wifi_list.h
printers/sovol-sv08-max/screen-daemon/service/: makerbase-byid.service  makerbase-client.service
printers/sovol-sv08-max/screen-daemon/src/: KlippyGcodes.cpp  KlippyRest.cpp  MakerbasePanel.cpp  MakerbaseParseIni.cpp  MakerbaseSerial.cpp  MoonrakerAPI.cpp  event.cpp  file_list.cpp  mks_error.cpp  mks_file.cpp  mks_gcode.cpp  mks_gpio.cpp  mks_hardware_test.cpp  mks_init.cpp  mks_net_info.cpp  mks_printer.cpp  mks_reprint.cpp  mks_update.cpp  mks_wpa_cli.cpp  process_messages.cpp  refresh_ui.cpp  send_msg.cpp  sovol_http.cpp  timelapse_list.cpp  ui.cpp  websocket_client.cpp  wifi_list.cpp
schema/: profile.schema.json
(+115 files in other folders)
